--- a/package.json
+++ b/package.json
@@ -12,16 +12,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/styled": "^11.11.5",
     "@ionic/react": "^7.6.3",
     "@ionic/react-router": "^7.6.3",
+    "@mui/material": "^5.16.0",
+    "@mui/styled-engine": "^5.15.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@ionic/react": "^7.6.3",
     "@ionic/react-router": "^7.6.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
@@ -30,6 +31,8 @@
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
   }
